[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = {version = "1.7.11"}

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
